fix: image stretch and centered vertically

--- a/src/component/ImageGallery/ImageGallary.css
+++ b/src/component/ImageGallery/ImageGallary.css
@@ -9,9 +9,10 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  align-items: center;
 }
 
-.flex-container > img {
+.flex-container > div {
   margin: 10px;
   padding: 20px;
 }
